# rainbow-scouts

api/: Cargo.toml  Rocket.toml
api/src/: lib.rs  models.rs  routes.rs
api/src/db/: helpers.rs  mod.rs
api/src/graphql/: context.rs  mutation_root.rs  query_root.rs  schema.rs
