[package]
name = "rainbow-api"
version = "0.1.0"
authors = ["Grant Perry <grant42perry@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
name = "librainbowapi"

[[bin]]
path = "src/bin/main.rs"
name = "rainbow"

[dependencies]
rocket = "0.4.2"
rocket_contrib = { version = "0.4.2", features = ["databases", "mongodb_pool"] }
bson = "0.1.3"
mongodb = "0.3.12"
juniper = "0.14.2"
juniper_rocket = "0.5.2"
